LWC/Logistic/force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>