LWC/Logistic/force-app/main/default/objects/Quotation__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <length>15</length>
    <type>Text</type>
</CustomField>