LWC/Logistic/force-app/main/default/objects/Quotation__c/fields/Parcel__c.field-meta.xml
<CustomField>
    <fullName>Parcel__c</fullName>
    <label>Parcel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>